Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91164

QBluetoothsocket::close sends disconnected signal twice

    XMLWordPrintable

Details

    • 3
    • 2a6ab855c2a4ffc5253126d53bc667b0076dd9c9 (qt/qtconnectivity/dev) 1b07519f6ca912c0c6334b96d26c61fd8b216a6e (qt/tqtc-qtconnectivity/tqtc/lts-5.15)
    • Qt6_Foundation_Sprint 29, Qt6_Foundation_Sprint 30

    Attachments

      Activity

        People

          andreasbuhr Andreas Buhr
          andreasbuhr Andreas Buhr
          Maurice Kalinowski Maurice Kalinowski
          Alex Blasche Alex Blasche
          Votes:
          0 Vote for this issue
          Watchers:
          3 Start watching this issue

          Dates

            Created:
            Updated:
            Resolved: