Fix bug: Let QBluetoothsocket::close emit disconnected only once

QBluetoothSocket::close emitted "disconnected" twice on macOS.
The first emit is by setSocketState(UnconnectedState).
This patch fixes the behavior to only emit it once.

Fixes: QTBUG-91164
Change-Id: I7147a28b40c49db947ee97a4f1a14f319da341d1
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
(cherry picked from commit 2a6ab855c2a4ffc5253126d53bc667b0076dd9c9)
Reviewed-by: Andreas Buhr <andreas.buhr@qt.io>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>